--- a/style.css
+++ b/style.css
@@ -230,10 +230,59 @@
     background-repeat: no-repeat;
     margin: 50px;
 }
-.flower-rectangle{
+
+.flower-rectangle {
     display: flex;
     justify-content: space-around;
     gap: 10px;
     margin-left: 240px;
     margin-right: 240px;
+}
+
+/* Latest deal style  */
+
+.latest-deal-section {
+    height: 550px;
+    background: #fff;
+    margin-top: 100px;
+    margin-bottom: 50px;
+}
+
+.latest-deal {
+    border-radius: 8px;
+    background: url('./image/Rectangle\ 9.png'), lightgray 0px -203.444px / 100% 213.755% no-repeat;
+    height: 449px;
+    margin-left: 240px;
+    margin-right: 240px;
+}
+
+.latest-deal-area {
+    text-align: center;
+    padding-top: 110px;
+}
+
+.latest-deal-title {
+    color: #272727;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 800;
+}
+
+.latest-deal-description {
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    padding-top: 10px;
+}
+
+.latest-deal-input {
+    border-radius: 8px;
+    background: #FFF;
+    width: 700px;
+    height: 64px;
+    border: none;
+    margin-right: 5px;
+    margin-left: 285px;
 }
